--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Who To Follow", "Index", "Users")</li>
-                    <li>@Html.ActionLink("Barks", "Index", "Barks")</li>
+                    @*<li>@Html.ActionLink("Barks", "Index", "Barks")</li>*@
                   
                 </ul>
                 @Html.Partial("_LoginPartial")
