--- a/Views/Following/Index.cshtml
+++ b/Views/Following/Index.cshtml
@@ -1,47 +1,46 @@
 ﻿@model IEnumerable<Barker.Data.UserFollowing>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Following";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Following</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.UserFollowed.Email)
+            @Html.DisplayNameFor(model => model.UserSelf.UserName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.UserSelf.Email)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>
+        @*<th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>*@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @*@Html.DisplayFor(modelItem => item.UserFollowed.Email)*@
-            @Html.ActionLink(item.UserId, "ViewByUser","Barks", new { id=item.Id  })
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserSelf.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Id)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @*@Html.DisplayFor(modelItem => item.UserFollowed.Email)*@
+                @Html.ActionLink(item.UserSelf.UserName, "ViewByUser", "Barks", new { id = item.UserSelf.UserName }, "")
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserSelf.Email)
+            </td>
+            @*<td>
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>*@
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            </td>
+        </tr>
+    }
 
 </table>
