--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -1,15 +1,13 @@
 ﻿@model IEnumerable<Barker.Data.AspNetUser>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Users";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Users</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
