launched to aws

--- a/Views/Following/Index.cshtml
+++ b/Views/Following/Index.cshtml
@@ -11,14 +11,14 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.UserSelf.UserName)
+            @Html.DisplayNameFor(model => model.UserFollowed.UserName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserSelf.Email)
+            @Html.DisplayNameFor(model => model.UserFollowed.Email)
         </th>
         @*<th>
-                @Html.DisplayNameFor(model => model.Id)
-            </th>*@
+            @Html.DisplayNameFor(model => model.Id)
+        </th>*@
         <th></th>
     </tr>
 
@@ -27,19 +27,19 @@
         <tr>
             <td>
                 @*@Html.DisplayFor(modelItem => item.UserFollowed.Email)*@
-                @Html.ActionLink(item.UserSelf.UserName, "ViewByUser", "Barks", new { id = item.UserSelf.UserName }, "")
+                @Html.ActionLink(item.UserFollowed.UserName, "ViewByUser", "Barks", new { id = item.UserFollowed.UserName }, "")
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UserSelf.Email)
+                @Html.DisplayFor(modelItem => item.UserFollowed.Email)
             </td>
             @*<td>
                     @Html.DisplayFor(modelItem => item.Id)
                 </td>*@
-            <td>
+            @*<td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                 @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
+            </td>*@
         </tr>
     }
 
