--- a/Views/Barks/Index.cshtml
+++ b/Views/Barks/Index.cshtml
@@ -84,6 +84,7 @@
             @if(User.Identity.GetUserName() == item.AspNetUser.UserName)
             {
             @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+            @Html.ActionLink(" Delete", "Delete", new { id = item.Id })
             }
 
         @Html.ActionLink("Details", "Details", new { id = item.Id })
